# google-api-for-C

./: .gitignore  .sample.c.swp  AUTHORS  ChangeLog  LICENSE  Makefile  Makefile.am  README.md  configure.ac  credentials.json  sample  sample.c
src/: Makefile  Makefile.am  buffers.c  buffers.h  google.c  google.h  google_datatype.c  http_utils.c  http_utils.h  sha256.c  sha256.h  shell.c  shell.h
src/samples/: Makefile.am  sample.c
web/: index.html
